internal/app/playbooks/role/catalogs/Network/Istio/1.22.2/files/addon/vs-grafana.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: istio-grafana
  namespace: istio-system
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - istio-grafana.cnstudio.kt.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
