internal/app/playbooks/role/catalogs/Network/Istio/1.22.2/files/addon/vs-kiali.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - kiali.cnstudio.kt.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
